[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
default-run = "friend-service"

[dependencies]
actix-web = "4"
actix-rt = "2.10.0"
serde = {version = "1.0.132", features = ["derive"]}
chrono = {version = "0.4.19", features = ["serde"]}

[[bin]]
name = "server1"

[[bin]]
name = "friend-service"